local/logs/project.log
2018-05-21T12:53:23.710Z - normal: Load ~/.CocosCreator/settings.json
2018-05-21T12:53:23.716Z - normal: checking language setting...
2018-05-21T12:53:23.717Z - normal: Language: zh
2018-05-21T12:53:25.733Z - success: protocol editor-framework registered
2018-05-21T12:53:25.733Z - success: protocol app registered
2018-05-21T12:53:25.733Z - success: protocol theme registered
2018-05-21T12:53:25.733Z - success: protocol packages registered
2018-05-21T12:53:25.733Z - success: protocol unpack registerred
2018-05-21T12:53:25.733Z - success: protocol disable-commonjs registerred
2018-05-21T12:53:26.029Z - normal: connected!
2018-05-21T12:53:26.035Z - normal: Check project F:\h5_game\h5_firstGame\tetris
2018-05-21T12:53:26.042Z - normal: Initializing Cocos2d
2018-05-21T12:53:26.332Z - normal: Initializing Asset Database
2018-05-21T12:53:26.381Z - success: protocol uuid registerred
2018-05-21T12:53:26.381Z - success: protocol db registerred
2018-05-21T12:53:26.381Z - success: protocol thumbnail registerred
2018-05-21T12:53:26.381Z - normal: Loading editor/builtin packages
2018-05-21T12:53:26.404Z - success: anysdk loaded
2018-05-21T12:53:26.548Z - success: assets loaded
2018-05-21T12:53:26.550Z - success: builder loaded
2018-05-21T12:53:26.553Z - success: cocos-analytics loaded
2018-05-21T12:53:26.556Z - success: console loaded
2018-05-21T12:53:26.600Z - success: fb-instant-games loaded
2018-05-21T12:53:26.603Z - success: hierarchy loaded
2018-05-21T12:53:26.607Z - success: inspector loaded
2018-05-21T12:53:26.609Z - success: keystore loaded
2018-05-21T12:53:26.612Z - success: node-library loaded
2018-05-21T12:53:26.615Z - success: package-asset loaded
2018-05-21T12:53:26.617Z - success: preferences loaded
2018-05-21T12:53:26.619Z - success: project-exporter loaded
2018-05-21T12:53:26.638Z - success: project-importer loaded
2018-05-21T12:53:26.640Z - success: project-settings loaded
2018-05-21T12:53:26.643Z - success: ui-kit loaded
2018-05-21T12:53:26.645Z - success: ui-grid loaded
2018-05-21T12:53:26.649Z - success: scene loaded
2018-05-21T12:53:26.650Z - success: sprite-editor loaded
2018-05-21T12:53:26.654Z - success: store loaded
2018-05-21T12:53:26.659Z - success: timeline loaded
2018-05-21T12:53:26.659Z - normal: Loading builtin packages
2018-05-21T12:53:26.662Z - success: asset-db-debugger loaded
2018-05-21T12:53:26.663Z - success: code-editor loaded
2018-05-21T12:53:26.664Z - success: color-picker loaded
2018-05-21T12:53:26.666Z - success: package-manager loaded
2018-05-21T12:53:26.672Z - success: sdkbox loaded
2018-05-21T12:53:26.675Z - success: tester loaded
2018-05-21T12:53:26.676Z - success: ui-kit-preview-extra loaded
2018-05-21T12:53:26.678Z - success: ui-kit-preview loaded
2018-05-21T12:53:26.679Z - success: ui-tree loaded
2018-05-21T12:53:28.024Z - normal: Initializing project F:\h5_game\h5_firstGame\tetris
2018-05-21T12:53:28.028Z - normal: Loading packages
2018-05-21T12:53:28.034Z - normal: Watching packages
2018-05-21T12:53:28.049Z - normal: Run Application
2018-05-21T12:53:28.677Z - success: preview server running at http://localhost:7456
2018-05-21T12:53:34.007Z - normal: 1.9.0
2018-05-21T13:20:17.776Z - failed: [db-task][sync-changes] Failed to import asset F:\h5_game\h5_firstGame\tetris\assets\Script\game.js, message: Compile error: SyntaxError: F:/h5_game/h5_firstGame/tetris/assets/Script/game.js: Unexpected token (15:59)
  13 |         this.nodeWidth = this.node.width;
  14 |         this.nodeHeight = this.node.height;
> 15 |         this.createShape(this.node,-30,this.nodeHeight/2 - );
     |                                                            ^
  16 |     },
  17 | 
  18 |     // called every frame
    at Parser.pp$5.raise (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$3.parseExprAtom (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3750:12)
    at Parser.pp$3.parseExprSubscripts (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOp (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3435:42)
    at Parser.pp$3.parseExprOp (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3438:19)
    at Parser.pp$3.parseExprOps (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3408:17)
    at Parser.pp$3.parseMaybeConditional (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2018-05-21T13:26:47.055Z - failed: [db-task][sync-changes] Failed to import asset F:\h5_game\h5_firstGame\tetris\assets\Script\game.js, message: Compile error: SyntaxError: F:/h5_game/h5_firstGame/tetris/assets/Script/game.js: Unexpected token, expected , (9:8)
   7 |             type    : [cc.Prefab],
   8 |         }
>  9 |         prefabHeight : 30,
     |         ^
  10 |     },
  11 | 
  12 |     // use this for initialization
    at Parser.pp$5.raise (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2018-05-21T15:12:01.407Z - failed: [db-task][sync-changes] Failed to import asset F:\h5_game\h5_firstGame\tetris\assets\Script\game.js, message: Compile error: SyntaxError: F:/h5_game/h5_firstGame/tetris/assets/Script/game.js: Unexpected token, expected , (42:4)
  40 |         }
  41 |     }
> 42 |     createPrefab : function(prefab){
     |     ^
  43 |         var prefabNode = cc.instantiate(prefab);
  44 |         return prefabNode;
  45 |     },
    at Parser.pp$5.raise (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2018-05-21T15:13:20.905Z - failed: [db-task][sync-changes] Failed to import asset F:\h5_game\h5_firstGame\tetris\assets\Script\game.js, message: Compile error: SyntaxError: F:/h5_game/h5_firstGame/tetris/assets/Script/game.js: Unexpected token, expected , (43:4)
  41 |         }
  42 |     }
> 43 |     createPrefab : function(prefab){
     |     ^
  44 |         var prefabNode = cc.instantiate(prefab);
  45 |         return prefabNode;
  46 |     },
    at Parser.pp$5.raise (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (E:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
